--- a/devtools/env.yml
+++ b/devtools/env.yml
@@ -1,4 +1,4 @@
-name: nglview_minimal
+name: dl-review
 channels:
   - conda-forge
   - defaults
@@ -10,5 +10,6 @@ dependencies:
   - nodejs  # Remove when using JLab3
   - ipywidgets>=7.5
   - nglview
+  - rdkit
 ## For Jupyter lab extensions, run:
 # jupyter labextension install @jupyter-widgets/jupyterlab-manager nglview-js-widgets @jupyterlab/toc @ijmbarr/jupyterlab_spellchecker
