change yml for CI.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "testCI"
   testCI:
-    name: Testing on OS ${{matrix.os}}
+    name: Testing on OS ${{matrix.os}}, Python ${{ matrix.python-version }}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
