Update conda environment

--- a/devtools/env.yml
+++ b/devtools/env.yml
@@ -2,6 +2,7 @@ name: dl-review
 channels:
   - conda-forge
   - defaults
+  - tpeulen
 dependencies:
     # Base depends
   - python>=3.6
@@ -11,5 +12,7 @@ dependencies:
   - ipywidgets>=7.5
   - nglview
   - rdkit
+  - oddt
+  - pymol-open-source
 ## For Jupyter lab extensions, run:
 # jupyter labextension install @jupyter-widgets/jupyterlab-manager nglview-js-widgets @jupyterlab/toc @ijmbarr/jupyterlab_spellchecker
